# STAR

./: .gitignore  README.md  debug_log.py  push_remote.py  pyproject.toml
app/: __init__.py  agent_dispatch.py  clients.py  config.py  constants.py  main.py  models.py  pii_service.py  router_service.py  session_store.py  slm_task_client.py  ui.py
scripts/: eval_split.py
tests/: conftest.py  test_clean_endpoint.py  test_router_flow.py  test_slm_task_client.py  test_star_chain.py
tests/data/: split_eval_sample.jsonl
