[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "star-router"
version = "0.1.0"
description = "Phase 1 task-aware routing service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.128.8",
  "httpx==0.28.1",
  "pydantic==2.13.0",
  "uvicorn==0.39.0",
  "presidio-analyzer>=2.2.35",
  "presidio-anonymizer>=2.2.35",
  "spacy>=3.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
